--- a/coffeed/static/index.html
+++ b/coffeed/static/index.html
@@ -7,7 +7,7 @@
 
 		<title>Coffeed</title>
 	
-		<link rel="stylesheet" href="{% static "css/style.css" %}">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 
 	<body>
@@ -23,11 +23,11 @@
 			<p>Email us now for a PDF of the Top 10 Coffee Shops in NYC: <a mailto:"hello@getcoffeed.com">hello@getcoffeed.com</a></p>
 
 			<a href="https://twitter.com/getcoffeed" target="_blank">
-				<img src="{% static "images/twitter.png" %}" alt="Twitter">
+				<img src="images/twitter.png" alt="Twitter">
 			</a>
 
 			<a href="https://www.facebook.com/getcoffeed" target="_blank">
-				<img src="{% static "images/facebook.png" %}" alt="Facebook">
+				<img src="images/facebook.png" alt="Facebook">
 			</a>
 			
 			<!-- END HERE --> 
